# bensdorp-1

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  close-pr.yml
.planning/: Bensdorp_1.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-skeleton-and-tooling/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-database-and-migrations/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-data-sources/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-strategy-logic/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-SECURITY.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-ui-components/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
src/bensdorp1/: __init__.py  _app.py  cli.py  config.py
src/bensdorp1/commands/: audit.py  (+18 more)
tests/: conftest.py  test_cli.py  test_data_calendar.py  test_data_constituents.py  test_data_prices.py  test_db_audit.py  test_db_backup.py  test_db_engine.py  test_db_positions.py  test_db_schema.py  test_repo.py
tests/test_commands/: test_audit.py  test_buy.py  test_cash.py  test_catchup.py  test_config.py  test_detail.py  test_fix.py  test_history.py  test_init.py  test_last.py  test_portfolio.py  test_refresh.py  test_restore.py  test_scan.py  test_scan_engine.py  test_sell.py  test_status.py
tests/test_strategy/: test_positions.py  test_screening.py
tests/test_ui/: test_config.py  test_empty_states.py  test_messages.py  test_progress.py  test_prompts.py  test_public_api.py  test_styles.py  test_tables.py
(+130 files in other folders)
