[build-system]
requires = ["uv_build>=0.7,<1.0"]
build-backend = "uv_build"

[project]
name = "bensdorp1"
version = "0.1.0"
description = "CLI for Bensdorp System #1 trend-following strategy"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.1",
    "rich>=14.0",
    "sqlalchemy>=2.0.49,<2.1",
    "pydantic>=2.13.4",
    "yfinance>=1.3.0",
    "pandas-market-calendars>=5.3.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.3",
    "numpy>=2.0",
]

[project.scripts]
bensdorp1 = "bensdorp1.cli:app"

# PEP 735 dependency groups — NOT [tool.uv.dev-dependencies] (legacy)
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.130",
    "ruff>=0.15",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
# cli.py uses intentional import ordering: `from` import establishes app before side-effect imports
"src/bensdorp1/cli.py" = ["I001"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "bensdorp1.commands.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
